# llm-from-scratch

./: .gitignore  DEV.md  LLM.md  README.md  W-bigram.model  backpropagation.md  bigram-LM.py  bigramInfer.py  bigramLM.py  bigramUtil.py  config.txt  engine.py  gpt.py  mathtest.py  mkdocs.yml  namegenerator.py  ngramLM.py  pyproject.toml  requirements.txt  sample-names.txt
backpropagation/: backpropagation.md  backpropagation.py  manualbackpropagation.py  neuralnet.py
data/tokenizer/: gabgpt-merges.txt  gabgpt-vocab.json
docs/: index.md
docs/api/: reference.md
docs/concepts/backprop/: backpropagation.md
docs/concepts/base_model/: base_model.md
docs/concepts/dataset/: dataset.md
docs/concepts/diffusion/: diffusion.md
docs/concepts/finetuning/: finetuning.md  reinforcement-learning.md
docs/concepts/inference/: inference.md
docs/images/: LLM-4-steps.excalidraw  llm-from-scratch.excalidraw  overview.excalidraw
src/: __init__.py
src/data/: __init__.py  analyse_tokens.py  checkgutenberg.py  dataset.py  gutenberg.py  hg_tokenizer.py  hg_wikipedia.py  reddit.py  shakespeare.py  shard_splitter.py  tokenizer.py  verdict.py  wiki_trainer.py  wikipedia_tokenizer.py
src/gabgpt/: dataloader.py  infer.py  model_gpt.py  multigpu_train.py  tokenizer.py  train_gpt.py  util.py
src/llm-book/: 1-data.py  2-attention.py  3-gpt.py  chapter2_attention.py  chapter3_gpt.py  chapter5_training.py  dummy_gpt.py  playground.py
src/model/: embed.py  gpt2.py
src/multimodal/: siglip.py
tests/: bigramLM.py  engine.py  mathtest.py  ngramInfer.py  ngramLM.py  stat-bigram.py
(+34 files in other folders)
