[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "numpy>=2.2.2",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
