[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "lxml>=5.3.1",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]
